testing background-white

--- a/spring-boot-tests/spring-boot-smoke-tests/spring-boot-smoke-test-web-ui/src/main/resources/templates/fragments.html
+++ b/spring-boot-tests/spring-boot-smoke-tests/spring-boot-smoke-test-web-ui/src/main/resources/templates/fragments.html
@@ -7,7 +7,7 @@
 	</head>
 	<body>
 		<div class="container">
-			<nav th:fragment="navbar" class="navbar navbar-dark bg-primary">
+			<nav th:fragment="navbar" class="navbar navbar-dark bg-danger">
 				<a class="navbar-brand" href="https://www.thymeleaf.org/" th:text="#{navbar.thymeleaf}">Thymeleaf</a>
 				<ul class="navbar-nav mr-auto mt-2 mt-lg-0">
 					<li class="nav-item"><a class="nav-link" th:href="@{/}" href="messages.html" th:text="#{navbar.messages}">Messages</a></li>
